--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   ],
     "require": {
     "composer/installers": "^1.0.20",
+    "cweagans/composer-patches": "~1.0",
     "drupal-composer/drupal-scaffold": "^2.0.1",
     "drupal/address": "~1.0",
     "drupal/config_direct_save": "^1.0",
